--- a/SNSFFW/css/content/Typography.css
+++ b/SNSFFW/css/content/Typography.css
@@ -224,7 +224,7 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 500;
     line-height: 1.5em;
 }
-p, blockquote, ul, ol, dl, table, form, fieldset {
+p, blockquote, ul, ol, dl, table, form, fieldset, hr {
     margin-bottom: var(--SNSFFW_PaddingMargin_Spacing_Big);
 }
 strong, b {
@@ -264,6 +264,12 @@ abbr {
 code {
     font-family: 'Anonymous Pro', monospace;
     line-height: 1.5em;
+}
+
+hr {
+    border: 0;
+    height: 1px;
+    background-color: currentColor;
 }
 
 
