--- a/SNSFFW/css/content/Typography.css
+++ b/SNSFFW/css/content/Typography.css
@@ -43,7 +43,7 @@ h5 {
 h6 {
     font-size: 1.125rem;
 }
-p, strong, b, em, i, cite, var, s, del, samp, abbr, code, blockquote, ul, ol, dl, table, figcaption, form, legend, label, input, textarea, select, button {
+p, strong, b, em, i, cite, var, s, del, samp, abbr, code, blockquote, ul, ol, dl, table, figcaption, form, legend, label, input, textarea, select, button, a {
     font-size: 1rem;
 }
 figcaption {
@@ -78,7 +78,7 @@ h5 {
 h6 {
     font-size: 1rem;
 }
-p, strong, b, em, i, cite, var, s, del, samp, abbr, code, blockquote, ul, ol, dl, table, figcaption, form, legend, label, input, textarea, select, button {
+p, strong, b, em, i, cite, var, s, del, samp, abbr, code, blockquote, ul, ol, dl, table, figcaption, form, legend, label, input, textarea, select, button, a {
     font-size: .875rem;
 }
 figcaption {
@@ -114,7 +114,7 @@ h5 {
 h6 {
     font-size: .875rem;
 }
-p, strong, b, em, i, cite, var, s, del, samp, abbr, code, blockquote, ul, ol, dl, table, figcaption, form, legend, label, input, textarea, select, button {
+p, strong, b, em, i, cite, var, s, del, samp, abbr, code, blockquote, ul, ol, dl, table, figcaption, form, legend, label, input, textarea, select, button, a {
     font-size: .75rem;
 }
 figcaption {
